removed scrollbars & fixed sidebar bg-color issue

--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,8 @@
   --clr-accent-dark-dimmed: rgb(61, 61, 61);
   --clr-note-divider-light: rgb(230, 230, 230);
   --clr-note-divider-dark: rgb(53, 48, 57);
-  --clr-scrollbar-light: rgb(187, 187, 187);
-  --clr-scrollbar-hover-light: rgb(125, 125, 125);
-  --clr-scrollbar-dark: rgb(98, 94, 102);
-  --clr-scrollbar-hover-dark: rgb(151, 148, 153);
+  --clr-no-notes-light: rgb(187, 187, 187);
+  --clr-no-notes-dark: rgb(86, 83, 90);
   --clr-bg-light: rgb(255, 255, 255);
   --clr-bg-topbar-light: rgb(243, 240, 246);
   --clr-bg-topbar-dark: rgb(54, 51, 56);
@@ -48,6 +46,7 @@
 
 body {
   font-family: Inter, Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 .main {
@@ -66,11 +65,26 @@ body {
   background-color: var(--clr-bg-light);
   max-width: 265px;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow: auto;
-  scrollbar-color: var(--clr-scrollbar-light);
+  overflow-y: scroll;
+  /* removing scrollbars (IE 10+, Firefox) */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+/* removing scrollbars (Safari, Chrome) */
+.sidebar::-webkit-scrollbar {
+  display: none;
+}
+
+.sidebar::-webkit-scrollbar {
+  display: none;
+}
+
+.main.dark .sidebar {
+  background-color: var(--clr-bg-sidebar-dark);
 }
 
 .sidebar-header {
@@ -122,7 +136,11 @@ body {
   width: 100%;
   height: 100%;
   font-size: 1.5rem;
-  color: rgba(255, 255, 255, 0.5);
+  color: var(--clr-no-notes-light);
+}
+
+.main.dark .no-notes {
+  color: var(--clr-no-notes-dark);
 }
 
 .sidebar-notes-list {
@@ -222,21 +240,24 @@ body {
 .editor {
   max-width: 100%;
   width: 100%;
-  height: calc(100vh - 74px);
+  max-height: calc(100vh - 74px);
   background-color: var(--clr-bg-light);
+  color: var(--clr-font-light);
 }
 
 .editor-textarea {
+  font-family: inherit;
   max-width: 100%;
   width: 100%;
+  border: none;
   height: calc(100vh - 72px);
-  background-color: var(--clr-bg-light);
   resize: none;
 }
 
 .main.dark .editor,
 .main.dark .editor-textarea {
   background-color: var(--clr-bg-editor-dark);
+  color: var(--clr-font-dark);
 }
 
 /* TOPBAR */
